# applied-programming-project-WI2

./: Patrick-Test-Endpoint.py  README.md  Test_main_day6.py  frontend.py  main-day-4.py  main.py  notes.db  pyproject.toml  test-day-4.py  test_main.py  test_validation.py  work-log-template.md  work-log.md
data/: notes.json
exploration/: Patrick-Test-Endpoint.py  api_tests.py  class_based_decorator.py  main-day-4.py  test-day-4.py  test_validation.py
